tests/ui/utils/dynamic.stderr
error: {$kind} {$lang} pattern
  --> tests/ui/utils/dynamic.rs:7:1
   |
LL | fn main() {
   | ^^^^^^^^^
   |
   = help: You can use `#[rpl::dynamic]` to create a customizable lint.
   = note: This is a dynamic RPL pattern, which can be customized during runtime.
   = note: `#[forbid(rpl::dynamic)]` on by default

error: aborting due to 1 previous error

